# 3D-Renderer

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: CMakeLists.txt  main.cpp
src/App/: App.cpp  App.h  CMakeLists.txt  ObjectParser.cpp  ObjectParser.h
src/Exceptions/: CMakeLists.txt  react.cpp  react.h
src/Kernel/: CMakeLists.txt  Kernel.cpp  Kernel.h
src/ObjFIleReader/: CMakeLists.txt  FaceElement.h  ObjFileReader.cpp  ObjFileReader.h  ObjParser.cpp  ObjParser.h  Response.h  TriangulatedObjectBuilder.cpp  TriangulatedObjectBuilder.h
src/Observer/: Observer.h
src/Renderer/: CMakeLists.txt  Camera.cpp  Camera.h  MathFuncs.cpp  MathFuncs.h  PixelScreen.cpp  PixelScreen.h  Renderer.cpp  Renderer.h  Triangle.cpp  Triangle.h  TriangularObject.cpp  TriangularObject.h  World.cpp  World.h
src/Renderer/Funcs/: CMakeLists.txt  MathFuncs.cpp  MathFuncs.h
src/Renderer/Light/: AmbientLight.cpp  AmbientLight.h  CMakeLists.txt  Color.cpp  Color.h  DirectionalLight.cpp  DirectionalLight.h
src/Renderer/Primitives/: CMakeLists.txt  Triangle.cpp  Triangle.h  TriangularObject.cpp  TriangularObject.h  TriangulatedObject.cpp  TriangulatedObject.h
src/Renderer/World/: CMakeLists.txt  Camera.cpp  Camera.h  World.cpp  World.h
src/UserDialog/: AddNewObjectDialog.cpp  AddNewObjectDialog.h  CMakeLists.txt
src/Utilities/: CMakeLists.txt  GLogger.h  Logger.cpp  Logger.h  LoggerInstances.h  Response.h  SimpleLogger.cpp  SimpleLogger.h  StringViewSplit.cpp  StringViewSplit.h  Timer.cpp  Timer.h
src/View/: CMakeLists.txt  PixelScreen.cpp  PixelScreen.h  View.cpp  View.h
